# hobbyprojects

./: .gitignore  README  bitbucket-pipelines.yml  contributors.txt
OS_Projects/: Makefile  loader.s
OS_Projects/iso/boot/: kernel.elf
Python/Python_Cisco_Class/: .circuitous.py.swp  .client_code.py.swp  circuitous.py  client_code.py  decorator_school.py  family.dis  fibo.py  generator_practice.py  iterator_school.py  looping_idioms.py  monkey_patching.py  property_demo.py  pyats_preview.py  redirect.py  rest_api_server.py  security.py  tmp.py  validators.py  with_demo.py
Python/Python_Cisco_Class/day2/: download.py
Python/Python_Cisco_Class/day2/notes2/: algebra.py  at_notation.py  circuitous.py  client_code.py  day1.py  day2.py  day3.py  day4.py  decorator_school.py  etag_db.bak  etag_db.dir  fibo.cover  fibo.py  generator_practice.py  iterator_school.py  links.txt  looping_idioms.py  monkey_patching.py  nettools.py  p_vs_np_2.py  property_demo.py  redirect.py  security.py  validators.py  with_demo.py
Python/maid/: README  house_keeper.py  install_maid.sh  job_processor.py  job_requestor.py  maid.yaml
SmartHome/: Dockerfile  README  SoftwareDesignSpecifications.docx  SoftwareDesignSpecifications.odt
SmartHome/software/: CMakeLists.txt  Makefile  build.sh
SmartHome/software/apps/: CMakeLists.txt  Makefile
SmartHome/software/apps/shell/: CMakeLists.txt  README  cli_parser.py  cli_parser.yaml  shell.c  shell.h  shell_cli.c  shell_enums.h  shell_intf.h  shell_workers.c
SmartHome/software/apps/shell/cli/: test_comm_mgr_lib_cli.c  test_comm_mgr_lib_cli.xml
SmartHome/software/infra/: CMakeLists.txt  Makefile
SmartHome/software/infra/app_manager/: CMakeLists.txt  Makefile  main.c
SmartHome/software/infra/cmn/: CMakeLists.txt  Makefile  smarthome_error.h
SmartHome/software/infra/cmn/interface/: README  interface.c  interface.h  interface_cmn.h
SmartHome/software/infra/cmn/logging/: CMakeLists.txt  Makefile  Makefile_2  logging.c  logging.h
SmartHome/software/infra/cmn/mapi/: CMakeLists.txt  README  mapi.c  mapi.h  mapi_enums.h  mapi_enums_defs.c  mapi_internal.h
SmartHome/software/infra/cmn/mapi/test_mapi/: mapi_test_app.c
SmartHome/software/infra/cmn/utils/: CMakeLists.txt  data_structures.c  data_structures.h  data_structures_cmn.h  data_structures_hash.c  data_structures_list.c  data_structures_list.h  data_structures_queue.c  data_structures_queue.h  shared_mem.c  shared_mem.h  taskhandler.c  taskhandler.h  utils.h  utils_enums.h
SmartHome/software/infra/cmn/utils/datastructures_test/: data_structures_test.c
SmartHome/software/infra/cmn/utils/shared_mem_test/: CMakeLists.txt  processA.c  processB.c
SmartHome/software/infra/cmn/utils/taskhandler_test/: CMakeLists.txt  taskhandler_test.c
SmartHome/software/infra/cmn/utils/utils_cpp/: CMakeLists.txt  __data_structures_hash.cpp  __data_structures_queue.cpp  utils_cpp.h
SmartHome/software/infra/comm_manager/: CMakeLists.txt  Makefile  comm_mgr_cmn.c  comm_mgr_cmn.h  comm_mgr_cmn_enums.h
SmartHome/software/infra/comm_manager/server/: CMakeLists.txt  Makefile  comm_mgr_srv.c  comm_mgr_srv.h  comm_mgr_srv_enums.h  comm_mgr_srv_enums_defs.c  comm_mgr_srv_protocol.c  comm_mgr_srv_protocol.h  comm_mgr_srv_uds.c  comm_mgr_srv_uds.h  comm_mgr_srv_workers.c
SmartHome/software/infra/comm_manager/unix_socket_example/no_select_server/: Makefile
SmartHome/software/infra/comm_manager/unix_socket_example/with_select_server/: client_2.c  server.c  server_2.c  server_3.c
SmartHome/software/infra/interface_manager/: intf_mgr.h  intf_mgr_enums_defs.c
SmartHome/software/infra/ipc_manager/unix_socket_example/: client.c  server.c
SmartHome/software/infra/system_manager/: CMakeLists.txt  Makefile  main.c  system_mgr  system_mgr.c  system_mgr.h  system_mgr_client_tbl.c  system_mgr_client_tbl.h  system_mgr_enums.h  system_mgr_enums_defs.c
SmartHome/software/makeUtils/: Makefile.defs  Makefile.include
SmartHome/software/smarthome/: smarthome_enums_to_str.h  smarthome_error.h  smarthome_essentials.h  smarthome_subsystems.h  smarthome_types.h
SmartHome_v2/ControlPlane/: .~lock.SoftwareDesignDocument.docx#  Design.drawio  NOTES  README  SmartHome.postman_collection.json  SoftwareDesignDocument.docx  build.sh  docker-compose.yml  reproduce_bug.py
SmartHome_v2/ControlPlane/authentication/: Dockerfile  __init__.py  authentication.py  requirements.txt  wsgi.py
SmartHome_v2/ControlPlane/authentication/profiles/: routes.py
SmartHome_v2/ControlPlane/authentication/users/: routes.py
SmartHome_v2/ControlPlane/common/database/: smarthome_db_orm.py  (+3 more)
SmartHome_v2/ControlPlane/infra/: Dockerfile  __init__.py  infra.py  requirements.txt
SmartHome_v2/ControlPlane/virtual_dataplane/: README  docker-compose.yml
SmartHome_v2/ControlPlane/web_app/: Dockerfile  __init__.py  requirements.txt  scratchpad.drawio  wsgi.py
SmartHome_v2/DataPlane/: .~lock.SoftwareDesignSpecifications.docx#  README  SoftwareDesignSpecifications.docx  SoftwareDesignSpecifications.odt
SmartHome_v2/DataPlane/software/: build.sh
SmartHome_v2/DataPlane/software/infra/cmn/interface/: CMakeLists.txt  interface.h  interface_cmn.h
SmartHome_v2/DataPlane/software/infra/cmn/mapi/test_mapi/: CMakeLists.txt  mapi_test_app.c
SmartHome_v2/DataPlane/software/infra/cmn/utils/datastructures_test/: CMakeLists.txt  data_structures_test.c
SmartHome_v2/DataPlane/software/infra/comm_manager/: CMakeLists.txt  comm_mgr_cmn_enums_defs.c
SmartHome_v2/DataPlane/software/infra/comm_manager/server/: comm_mgr_srv.c  comm_mgr_srv.h  comm_mgr_srv_enums.h  comm_mgr_srv_protocol.h  comm_mgr_srv_uds.c  comm_mgr_srv_uds.h
SmartHome_v2/DataPlane/software/infra/comm_manager/unix_socket_example/no_select_server/: client.c  server.c
SmartHome_v2/DataPlane/software/infra/comm_manager/unix_socket_example/with_select_server/: Makefile  client.c
SmartHome_v2/DataPlane/software/infra/interface_manager/: CMakeLists.txt  intf_mgr_enums.h  main.c
logAnalyser/: logAnalyzer.py  tech_support.xml  tech_support_cli_parser.py  tech_support_parser.py
(+96 files in other folders)
